--- a/scoring-pipeline/pom.xml
+++ b/scoring-pipeline/pom.xml
@@ -27,6 +27,11 @@
             <version>3.6.0</version>
         </dependency>
         <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>1.12.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
             <version>${hazelcast.version}</version>
